menambahkan gambar serta memanggilnya ke dalam file html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <div class="sidebar">
       <center>
-        <img src="" class="profile_image" alt="">
+        <img src="image/Diki_1.png" class="profile_image" alt="">
         <h4>Admin</h4>
       </center>
       <a href="#"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
